# scdiv-paper

./: README.md  pyproject.toml
data/fig2/: trajectory_subtype_counts.csv
data/fig3/annot/: E10.5_E1S1.h5ad  E11.5_E1S1.h5ad  E12.5_E1S1.h5ad  E13.5_E1S1.h5ad  E9.5_E1S1.h5ad
data/fig3/scdiv_cache/: E10.5_E1S1_hvg2000_nn15_npcs50_rs15.0_rmc20_md0.25_q2_a0.5.npz  E11.5_E1S1_hvg2000_nn15_npcs50_rs15.0_rmc20_md0.25_q2_a0.5.npz  E12.5_E1S1_hvg2000_nn15_npcs50_rs15.0_rmc20_md0.25_q2_a0.5.npz  E13.5_E1S1_hvg2000_nn15_npcs50_rs15.0_rmc20_md0.25_q2_a0.5.npz  E14.5_E1S1_hvg2000_nn15_npcs50_rs15.0_rmc20_md0.25_q2_a0.5.npz  E15.5_E1S1_hvg2000_nn15_npcs50_rs15.0_rmc20_md0.25_q2_a0.5.npz  E16.5_E1S1_hvg2000_nn15_npcs50_rs15.0_rmc20_md0.25_q2_a0.5.npz  E9.5_E1S1_hvg2000_nn15_npcs50_rs15.0_rmc20_md0.25_q2_a0.5.npz
data/fig4/: scdiv_aggregoid.csv
data/figS_rich/scanpy/: default_clusters.csv  default_hvg.csv  seurat_like_clusters.csv  seurat_like_hvg.csv
data/figS_rich/seurat/: celltype.csv  scanpy_like_clusters.csv  scanpy_like_hvg.csv  seurat_like_clusters.csv  seurat_like_hvg.csv
notebooks/: _figutils.py  fig1.py  fig2.py  fig3.py  fig4.py  figS_rich.py
scripts/: make_fig2_data.py  make_fig3_annot.py
